# data-engineerings

./: .gitignore  JUST_UV.md  README.md  justfile  main.py  pyproject.toml
azure/: README.md  commons_abc.py  comoons_protocols.py  justfile  main.py  pyproject.toml
