[project]
name = "data-engineerings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "coverage>=7.12.0",
    "interrogate>=1.7.0",
    "pre-commit>=4.5.0",
    "pyrefly>=0.44.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
]

[tool.uv.workspace]
members = [
    "azure",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
